Change deploy version, launch screen view, the descriptions. Delete unused specifications.

--- a/Clinical-Psychology-1-A-Info.plist
+++ b/Clinical-Psychology-1-A-Info.plist
@@ -19,5 +19,12 @@
 		<string>Roboto-Thin.ttf</string>
 		<string>Roboto-ThinItalic.ttf</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>ColorBackground</string>
+		<key>UIImageName</key>
+		<string>splash</string>
+	</dict>
 </dict>
 </plist>
