fix full screen launch screen problem.

--- a/Clinical-Psychology-1-A-Info.plist
+++ b/Clinical-Psychology-1-A-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UILaunchScreen</key>
+	<true/>
 	<key>NSApplicationCrashOnExceptions</key>
 	<string>YES</string>
 	<key>UIAppFonts</key>
@@ -19,12 +21,5 @@
 		<string>Roboto-Thin.ttf</string>
 		<string>Roboto-ThinItalic.ttf</string>
 	</array>
-	<key>UILaunchScreen</key>
-	<dict>
-		<key>UIColorName</key>
-		<string>ColorBackground</string>
-		<key>UIImageName</key>
-		<string>splash</string>
-	</dict>
 </dict>
 </plist>
