--- a/Clinical Psychology 1.xcodeproj/xcshareddata/xcschemes/Clinical Psychology 1-A.xcscheme
+++ b/Clinical Psychology 1.xcodeproj/xcshareddata/xcschemes/Clinical Psychology 1-A.xcscheme
@@ -15,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5BCD47C52D6E5E9F0053E848"
-               BuildableName = "Clinical Psychology 1-B.app"
-               BlueprintName = "Clinical Psychology 1-B"
-               ReferencedContainer = "container:Clinical Psychology 1-A.xcodeproj">
+               BlueprintIdentifier = "5BBC9AAF2BD0304200170B62"
+               BuildableName = "Clinical Psychology 1.app"
+               BlueprintName = "Clinical Psychology 1"
+               ReferencedContainer = "container:Clinical Psychology 1.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,10 +44,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5BCD47C52D6E5E9F0053E848"
-            BuildableName = "Clinical Psychology 1-B.app"
-            BlueprintName = "Clinical Psychology 1-B"
-            ReferencedContainer = "container:Clinical Psychology 1-A.xcodeproj">
+            BlueprintIdentifier = "5BBC9AAF2BD0304200170B62"
+            BuildableName = "Clinical Psychology 1.app"
+            BlueprintName = "Clinical Psychology 1"
+            ReferencedContainer = "container:Clinical Psychology 1.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -61,10 +61,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5BCD47C52D6E5E9F0053E848"
-            BuildableName = "Clinical Psychology 1-B.app"
-            BlueprintName = "Clinical Psychology 1-B"
-            ReferencedContainer = "container:Clinical Psychology 1-A.xcodeproj">
+            BlueprintIdentifier = "5BBC9AAF2BD0304200170B62"
+            BuildableName = "Clinical Psychology 1.app"
+            BlueprintName = "Clinical Psychology 1"
+            ReferencedContainer = "container:Clinical Psychology 1.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
